// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI snapshot testing AI don't recieve cards 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-1"
    />
    <div
      className="col-10"
    >
      <div
        className="container invisible"
      >
        <div
          className="row"
        >
          <div
            className="col-1 card mb-1 shirt"
          />
        </div>
      </div>
    </div>
    <div
      className="col-1"
    />
  </div>
</div>
`;

exports[`AI snapshot testing AI recieve cards 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-1"
    />
    <div
      className="col-10"
    >
      <div
        className="container mt-1"
      >
        <div
          className="row justify-content-center"
        >
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 ml-3 card mb-1 shirt"
          />
          <div
            className="col-1 align-self-center"
          >
            <b>
              +
              27
            </b>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-1"
    />
  </div>
</div>
`;
